# 3D-Reconstruction

./: .gitignore  readme.md
HW1-calibration_algorithm/calibration_algorithm/: CMakeLists.txt  homework.md  main.cpp  readme.md  test.cpp
homework1/calibration_algorithm/: main.cpp
homework2/homework2-1/: homework.md
homework2/homework2-1/triangulate/: CMakeLists.txt  main.cpp  readme.md
homework2/homework2-1/triangulate/camera/: camera.cpp  camera.h
homework2/homework2-1/triangulate/estimator/: triangulation.cpp
homework2/homework2-2/: homework.md
homework2/homework2-2/essential_matrix/: CMakeLists.txt  main.cpp  test.cpp
homework2/homework2-2/essential_matrix/camera/: camera.cpp  camera.h
homework2/homework2-2/essential_matrix/estimator/: essential_matrix.cpp
homework3/FeatureMatch/: CMakeLists.txt  feature.cpp  homework.md  test.cpp  utils.cpp  utils.h
homework4/StereoViewer/StereoViewer/: CMakeLists.txt  main.cpp
homework4/StereoViewer/StereoViewer/camera/: camera.cpp  camera.h
homework4/StereoViewer/StereoViewer/estimator/: epipolar_search.cpp  epipolar_search.h  essential_matrix.cpp  essential_matrix.h  stereo_rectify.cpp  stereo_rectify.h  utils.cpp  utils.h
homework4/StereoViewer/StereoViewer/visualizer/: visualizer.cpp  visualizer.h
homework5/BundleAdjustment/: CMakeLists.txt  test.cpp
homework5/BundleAdjustment/camera/: camera.cpp  camera.h
homework5/BundleAdjustment/data/: calib.txt  cameras.txt  cameras_raw.txt  default.yaml
homework5/BundleAdjustment/estimator/: EigenQuaternionParameterization.cpp  EigenQuaternionParameterization.h  ceres_optim.cpp  ceres_optim.h  essential_matrix.cpp  essential_matrix.h  triangulation.cpp  triangulation.h  utils.cpp  utils.h
homework5/BundleAdjustment/feature/: match.cpp  match.h  sift.cpp  sift.h
homework5/BundleAdjustment/sfm/: backend.cpp  backend.h  common_include.h  config.cpp  config.h  dataset.cpp  dataset.h  feature.h  frame.cpp  frame.h  frontend.cpp  frontend.h  map.cpp  map.h  mappoint.cpp  mappoint.h  visual_sfm.cpp  visual_sfm.h
homework5/BundleAdjustment/visualizer/: viewer.cpp  viewer.h
project/camera_calibration/: calibration.py  distortion.py  get_obj_coordinate.py  get_projection_map.py  homography.py  main.py  refinement.py  test.py
project/camera_calibration/camclib/: calibration.py  extrinsic.py  helper.py  homography.py  intrinsic.py
project/camera_calibration/triangular__/: point_selector.py  triangular.py  utils.py
